--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Home</title>
-	<link type="text/css" rel="stylesheet" href="styles\mystyle.css" media="screen">
+	<link type="text/css" rel="stylesheet" href="mystyle.css" media="screen">
 	<style>
 	<link href="https://fonts.googleapis.com/css?family=Bungee+Inline|Bungee+Shade|Inconsolata|Knewave|Lobster|Merienda+One|Metal+Mania|Oleo+Script|Oleo+Script+Swash+Caps|Pattaya|Playfair+Display|Shrikhand" rel="stylesheet">
 	</style>
